--- a/client/src/css/playlists.css
+++ b/client/src/css/playlists.css
@@ -138,19 +138,23 @@ h3 {
 
 select {
     width: 200px;
-    margin: 2rem;
+    margin-right: 2rem;
 }
 
 .add-more {
-    margin: 0 1.3rem;
+    margin: 0 1.6rem;
 }
 
 
 .single-items {
     flex-wrap: wrap;
+    display: flex;
+    width: 100%;
+
 }
 
 .preview-wrapper {
+  
     width: 100%;
 }
 
@@ -161,14 +165,7 @@ select {
 
 .preview {
     display: flex;
-    margin: 1rem;
-}
-
-.single-items > img {
-    margin: 0.5rem;
-    width: 180px;
-    height: 250px;
-    object-fit: cover;
+    margin: 1rem 0;
 }
 
 li {
@@ -452,4 +449,32 @@ p .twitter-share  {
     transition: 1s;
     animation: bounce;
     animation-duration: 2s;
+}
+
+.section-wrapper {
+    display: flex;
+    flex-direction:column;
+ 
+    max-width: 250px;
+    height: 250px;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 1rem;
+}
+
+.section-wrapper > img {
+   width: 150px;
+   height: 100%;
+   object-fit: cover;
+}
+
+.delete-button {
+    margin-left: 0.4rem;
+    color: var(--color2);
+    border-bottom: 1px solid var(--color2);
+}
+
+.publish-button {
+    margin-left: 1rem;
+    
 }
