--- a/client/src/css/playlists.css
+++ b/client/src/css/playlists.css
@@ -229,6 +229,10 @@ h4 {
 .item-meta {
     font-family: var(--meta-font);
     font-size: smaller;
+     display: -webkit-box;
+    -webkit-box-orient: vertical;
+     -webkit-line-clamp: 5; /* Change this line if you want. In this case it trimmed the text to 3 lines. */
+    overflow: hidden;
 }
 
 .description {
@@ -483,3 +487,4 @@ p .twitter-share  {
     margin-left: 1rem;
     
 }
+
